--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: "3.8"
 services:
   rust:
     build: .
+    ports:
+      - 8080:8080
+    command: "sh -c 'cd hello-webpack-template && npm start'"
     volumes:
       - .:/usr/hello-wasm-bindgen
 
