stop using @wasm-tool/wasm-pack-plugin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@ version: "3.8"
 services:
   rust:
     build: .
-    ports:
-      - 8080:8080
-    command: "sh -c 'cd hello-webpack-template && npm start'"
+    command: "sh -c 'cd hello-webpack-template && cargo build --lib && wasm-pack build --out-name index .'"
     volumes:
       - .:/usr/hello-wasm-bindgen
 
   node:
     build: front
+    command: "sh -c 'cd hello-webpack-template && npm start'"
+    ports:
+      - 8080:8080
     volumes:
       - .:/usr/hello-wasm-bindgen
